Rename resolver's node_type to container_type
